2001-10-08  J. Brobecker <brobecker@gnat.com>

	* hpux-thread.c: rewrite find_active_thread() and find_tcb()
	to use ptid_t, instead of overloading the thread and the pid
	into the same 32-bit value. Make associated necessary adaptations.
	Also remove unused variable cached_active_thread.

2001-10-08  Nicholas Duffek  <nsd@redhat.com>

	* MAINTAINERS (powerpc, SCO/Unixware, Solaris/x86): Remove my
	entries.

2001-10-06  Mark Kettenis  <kettenis@beast.freebsd.org>

	* config/alpha/tm-fbsd.h (FRAME_CHAIN_VALID): Define.

2001-10-04  Tom Tromey  <tromey@redhat.com>

	* main.c (enable_external_editor): Don't declare.
	(captured_main): Don't set enable_external_editor.

2001-10-02  Kevin Buettner  <kevinb@redhat.com>

	* Makefile.in (ALLDEPFILES): Add solib-svr4.c and solib-sunos.c
	to this list.
	(solib-sunos.o): Add dependencies.
	(solib-svr4.o): Revise dependencies.
	* solib-svr4.c: Remove SunOS shared library support.
	* solib-sunos.c: New file, created from solib-svr4.c, which still
	contains SunOS shared library support, but no SVR4 support.

	* config/i386/nbsd.mh (NATDEPFILES): Remove solib-svr4.o and
	solib-legacy.o from this list.  Add solib-sunos.o.
	* config/i386/sun386.mt (TDEPFILES): Likewise.
	* config/m68k/nbsd.mh (NATDEPFILES): Likewise.
	* config/m68k/sun2os4.mt (TDEPFILES): Likewise.
	* config/m68k/sun3os4.mt (TDEPFILES): Likewise.
	* config/ns32k/nbsd.mh (NATDEPFILES): Likewise.
	* config/sparc/nbsd.mh (NATDEPFILES): Likewise.
	* config/sparc/sun4os4.mt (TDEPFILES): Likewise.

2001-10-01  Elena Zannoni <ezannoni@redhat.com>

        * Makefile.in (mipsread.o): Remove old dependency on partial-stab.h.

2001-10-01  Elena Zannoni <ezannoni@redhat.com>

        * xcoffread.c (N_UNDF, N_ABS, N_TEXT, N_DATA, N_BSS, N_COMM, N_FN,
        N_EXT, N_INDR, N_SETA, N_SETT, N_SETD, N_SETB, N_SETV,
        CUR_SYMBOL_TYPE, CUR_SYMBOL_VALUE, START_PSYMTAB, END_PSYMTAB,
        SET_NAMESTRING): Delete definitions.
        Don't include language.h any more.