@@ -1,3 +1,8 @@
+2001-10-10  Keith Seitz  <keiths@redhat.com>
+
+	* varobj.c (cplus_value_of_child): Deal with a failure
+	to dereference a pointer object.
+
 2001-10-08  J. Brobecker <brobecker@gnat.com>
 
 	* hpux-thread.c: rewrite find_active_thread() and find_tcb()
